--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <div class="container">
     <!-- Video tanpa fullscreen -->
     <video controls autoplay playsinline controlslist="nofullscreen nodownload noremoteplayback" disablepictureinpicture preload="metadata">
-      <source src="https://cdn.videy.co/8nvy62J51.mp4" type="video/mp4">
+      <source src="https://cdn.videy.co/HQ2HFg1n1.mp4" type="video/mp4">
       Browser Anda tidak mendukung pemutar video.
     </video>
   </div>
